10 January 2009

* New command, server-info, to show some server information and terminal
  details.

09 January 2009

* Stop using ncurses variables and instead build a table of the codes we want
  into an array for each terminal type. This makes the code a little more
  untidy in places but gets rid of the awful global variables and calling
  setterm all the time, and shoves all the ncurses-dependent mess into a single
  file, tty-term.c. It also allows overriding single terminal codes, this is
  used to fix rxvt on some platforms (where it is missing dch) and in future
  may allow user customisation a la vim.
* Update key handling code. Simplify, support ctrl properly and add a new
  window option (xterm-keys) to output xterm key codes including ctrl and,
  if available, alt and shift.

08 January 2009

* If built without DEBUG (the release versions), don't cause a fatal error if
  the grid functions notice an input error, just log and ignore the
  request. This might mean me getting shouted at less often when bugs kill
  long-running sessions, at least in release versions.
* Hopefully fix cursor out-of-bounds checking when writing to grid. When I
  wrote the code I must have forgotten that the cursor can be one cell off the
  right of the screen (yes, I know), so there were number of out-of-bounds/
  overflow problems.

07 January 2009

* New flag to set and setw, -u, to unset a option (allowing it to inherit from)
  the global options again.
* Added more info messages for options changes.
* A bit of tidying and reorganisation of options code.

06 January 2009

* Don't crash when backspacing if cursor is off the right of the screen,
  reported by David Chisnall.
* Complete words at any point inside command in prompt, also use option name
  as well as command names.
* Per-client prompt history of up to 100 items.
* Use a splay tree for key bindings instead of an array. As a side-effect this
  sorts them when listed.

22 December 2008
