@@ -1,4 +1,4 @@
-# $Id: Makefile,v 1.84 2009-01-10 15:21:31 nicm Exp $
+# $Id: Makefile,v 1.85 2009-01-10 19:35:39 nicm Exp $
 
 .SUFFIXES: .c .o .y .h
 .PHONY: clean update-index.html upload-index.html
@@ -36,8 +36,10 @@ SRCS= tmux.c server.c server-msg.c server-fn.c buffer.c buffer-poll.c status.c \
       cmd-show-buffer.c cmd-list-buffers.c cmd-delete-buffer.c \
       cmd-list-commands.c cmd-move-window.c cmd-select-prompt.c \
       cmd-respawn-window.c cmd-source-file.c cmd-server-info.c \
-      window-scroll.c window-more.c window-copy.c options.c paste.c \
-      tty.c tty-term.c tty-keys.c tty-write.c colour.c utf8.c options-cmd.c
+      cmd-clock-mode.c \
+      window-clock.c window-scroll.c window-more.c window-copy.c \
+      options.c options-cmd.c paste.c colour.c utf8.c \
+      tty.c tty-term.c tty-keys.c tty-write.c
 
 CC?= cc
 INCDIRS+= -I. -I- -I/usr/local/include
