@@ -62,7 +62,9 @@
 - document xterm-keys
 - document server-info
 - document window options changes
-- a window mode to show a clock
+- document clock-mode
+- automatic lock/screensaver after $time inactivity (switch all windows into
+  clock mode/blank)
 - a key binding to display the status line when it is turned off
 - FAQ "Can I have some examples of cool things I can do with tmux?" -- linkw
 - clone session command
